20071213 menu.c,ui/{gtk/{gtkjoystick.c,gtkui.c,rollback.c},win32/{error.c,
	 win32ui.c}},widget/menu.c: update titlebar capitalisation (Stuart).
20071213 man/fuse.1: use named character for acute E (Stuart).
20071214 menu_data.dat: don't display the hardware joystick menu options if
	 joysticks are not available (Stuart).
20071214 widget/options.pl: remove Perl warning (Stuart).
20071218 ChangeLog,README,configure.in,man/fuse.1: update for 0.9.0 release
	 (Stuart).
20071218 configure.in: generate ui/win32/icons/Makefile (Stuart).
20071221 BRANCH: Release-0_9_0-branch
20071221 TAG: Release-0_9_0-pre1 (from Release-0_9_0-branch)
20071221 display.c: fix copy-and-paste typo (Release-0_9_0-branch).
20071230 utils.c: recognise periph_beta_active as valid on a .trd open (fixes
         bug #1860344) (Release-0_9_0-branch) (Fred).
20080102 man/fuse.1: small Xlib update (patch #1861180) (Release-0_9_0-branch)
         (Gergely Szasz).
20080102 disk/disk.[ch]: fix opening of .fdi, .cpc and .td0 files (patch
         #1860368) (Release-0_9_0-branch) (Gergely Szasz).
20080102 fuse.c: update copyright date (Release-0_9_0-branch) (Stuart Brady).
20080103 widget/browse.c: ensure all lines are displayed (patch #1860829)
         (Release-0_9_0-branch) (Gergely Szasz).
20080104 ChangeLog,README: set release date (Release-0_9_0-branch).
20080104 man/fuse.1: update date (Release-0_9_0-branch) (Stuart).
20080104 man/fuse.1: change date style (Release-0_9_0-branch) (Stuart).
20080105 disk/disk.c: initialise variables (Release-0_9_0-branch).
20080105 TAG: Release-0_9_0
20080107 Merge Release-0_9_0-branch changes r3444:3841 to trunk.
20080108 Makefile.am,configure.in,sound/Makefile.am,timer/Makefile.am,
	 ui/{gtk/Makefile.am,sdl/Makefile.am},widget/Makefile.am: tidy up
	 use of SDL_CFLAGS and SDL_LIBS.
20080113 z80/z80.c: unhalt on NMI (thanks, Simon Owen) (Stuart).
20080115 ay.c,disk/{beta.c,disk.c,wd_fdc.c}: warnings removal.